# MyUpdater

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt
app/include/Updater2/logic/: interface.h
app/include/Updater2/widget/: mainwindow.h
app/src/: main.cpp
include/IO/: fileinteractions.h  ssldigest.h
include/Updater2/IO/: filesystem.h
libs/io/: CMakeLists.txt
libs/io/include/io/: fileinteractions.h  ssldigest.h
libs/io/src/: fileinteractions.cpp  fileinteractions_linux.cpp  fileinteractions_windows.cpp  ssldigest.cpp
libs/io/test_assets/md5/: XMLGoogleTestResults.xml  md5_result.txt  md5_target.txt  md5_target2.txt
libs/io/tests/: CMakeLists.txt
libs/io/tests/fileinteraction/: commandline_printer.cpp  fileinteraction_test.cpp
libs/io/tests/ssldigest/: ssldigest_defect.cpp  ssldigest_test.cpp
libs/net/: CMakeLists.txt
libs/net/include/: downloader.h
libs/net/src/: provisional_runner.cpp
libs/net/tests/: CMakeLists.txt  buildCertificates.cmake  buildCertificatesOld.cmake  certificate_handler.cpp  cleanInvalidCertificates.cmake  downloader_test.cpp
libs/net/tests/certs/: ca.conf  server.conf
libs/net/tests/include/: certificate_handler.h
src/: CMakeLists.txt  main.cpp
src/IO/: CMakeLists.txt  fileinteractions.cpp  filesystem.cpp  list_digest.cpp  ssldigest.cpp
src/updater/: CMakeLists.txt  hello.cpp  main.cpp
tests/: CMakeLists.txt
tests/IO/: fileinteraction_test.cpp  filesystem_test.cpp
tools/list_digest/: CMakeLists.txt
